test/corpus/operator.txt
===
Special Operator
===
a = 1;
b = a >< 2;

---

    (source_file
      (expression_statement
        (assignment_expression
          (identifier)
          (number_literal)))
      (expression_statement
        (assignment_expression
          (identifier)
          (binary_expression
            (identifier)
            (number_literal)))))
